--- a/public/productosAdmin.html
+++ b/public/productosAdmin.html
@@ -38,15 +38,15 @@
                     <div class="card border border-1 border-dark" style="width: 100%; max-width: 300px;">
                         <h5 class="card-title text-center mt-3">Nuevo producto</h5>
                         <div class="card-body">
-                            <form id="formEditar">
+                            <form id="formAñadir">
                                 <div class="mb-3">
-                                    <input type="text" class="form-control" placeholder="Título" required>
+                                    <input type="text" class="form-control" placeholder="Titulo" name="Titulo" required>
                                 </div>
                                 <div class="mb-3">
-                                    <input type="text" class="form-control" placeholder="Descripción" required>
+                                    <input type="text" class="form-control" placeholder="Descripcion" name="Descripcion">
                                 </div>
                                 <div class="mb-3">
-                                    <input type="number" class="form-control" placeholder="Precio" required>
+                                    <input type="number" class="form-control" placeholder="Precio" name="Precio" required>
                                 </div>
                                 <button type="submit" class="btn btn-success w-100">Añadir Producto</button>
                             </form>
