--- a/public/productosAdmin.html
+++ b/public/productosAdmin.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div >
-                <p id="contMensaje" class="confirmado text-success" style="position: fixed; top: 100px;"></p>
+                <p id="contMensaje" class="confirmado text-success" style="position: fixed; top: 100px; z-index: 3000; background-color: aquamarine;"></p>
             </div>
             <div id="prodNuevo" class="new">
                 <div class="d-flex justify-content-center align-items-center ">
