--- a/public/productosAdmin.html
+++ b/public/productosAdmin.html
@@ -73,16 +73,19 @@
                             <h5 class="card-title text-center mt-3">Editar producto</h5>
                             <div class="card-body">
                                 <form id="formEditar">
+                                    <input type="hidden" name="idEditar">
                                     <div class="mb-3">
-                                        <input type="text" class="form-control" placeholder="Título" required>
+                                        <input type="text" name="titulo" class="form-control" placeholder="Título" required>
                                     </div>
                                     <div class="mb-3">
-                                        <input type="text" class="form-control" placeholder="Descripción" required>
+                                        <input type="text" name="descripcion" class="form-control" placeholder="Descripción" required>
                                     </div>
                                     <div class="mb-3">
-                                        <input type="number" class="form-control" placeholder="Precio" required>
+                                        <input type="text" name="precio" class="form-control" placeholder="Precio" required>
                                     </div>
                                     <button type="submit" class="btn btn-warning w-100">Editar Producto</button>
+
+                                    <p id="mensajeEditar" class="text-danger m-2"></p>
                                 </form>
                             </div>
                         </div>
